using System.Collections;
using System.Collections.Generic;


internal class AnimationStrings 
{
    internal static string IsRunning = "IsRunning";
    internal static string Isgrounded = "IsGrounded";
    internal static string Yvelocity = "Yvelocity";
    internal static string Jump = "Jump";
    internal static string IsOnWall = "IsOnWall";
    internal static string IsOnCelling = "IsOnCelling";
    internal static string AttackTrigger = "Attack";
    internal static string CanMove = "CanMove";
    internal static string HasTarget = "HasTarget";
    internal static string IsAlive = "IsAlive";
    internal static string IsHit = "IsHit";
    internal static string GameLevelsFinished = "GameLevelsFinished";
}
